--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <section>
       <div id="text-content" class="flex items-center justify-between mb-6">
         <h1 class="text-2xl font-bold text-[#002C5C]">Available Jobs</h1>
-        <p class="font-medium text[#64748B] text-[16px]">0 <span>Jobs</span></p>
+        <p id="jobs-count" class="font-medium text[#64748B] text-[16px]"></p>
       </div>
       <div class="tabs tabs-boxed bg-transparent p-0 gap-2">
         <button
@@ -107,14 +107,16 @@
           <div class="main-card-content space-y-4">
             <!-- card content -->
             <div class="top-title mb-3">
-              <h1 class="text-2xl font-bold text-[#002C5C] mb-1">
+              <h1 class="job-name text-2xl font-bold text-[#002C5C] mb-1">
                 Mobile First Corp
               </h1>
-              <p class="text-xl font-normal text-[#64748B]">
+              <p class="job-skill text-xl font-normal text-[#64748B]">
                 React Native Developer
               </p>
             </div>
-            <div class="flex items-center gap-2 text-slate-500 font-medium">
+            <div
+              class="job-type flex items-center gap-2 text-slate-500 font-medium"
+            >
               <span>Remote</span>
               <span class="text-[6px] text-slate-500">
                 <i class="fa-solid fa-circle"></i
@@ -125,9 +127,11 @@
               ></span>
               <span>$130,000 - $175,000</span>
             </div>
-            <div class="job-description space-y-2">
-              <button class="btn btn-soft text-[14px]">Not Applied</button>
-              <p class="text-gray-700">
+            <div class="space-y-2">
+              <button id="job-status" class="btn btn-soft text-[14px]">
+                Not Applied
+              </button>
+              <p class="job-description text-gray-700">
                 Build cross-platform mobile applications using React Native.
                 Work on products used by millions of users worldwide.
               </p>
@@ -142,288 +146,8 @@
             </div>
           </div>
           <!-- Card DElet butoon -->
-          <button id="delet-btn" class="btn btn-ghost btn-error btn-outline">
-            <i class="fa-regular fa-trash-can"></i>
-          </button>
-        </div>
-        <div class="main-card flex items-start justify-between space-y-8">
-          <!-- Card -->
-          <div class="main-card-content space-y-4">
-            <!-- card content -->
-            <div class="top-title mb-3">
-              <h1 class="text-2xl font-bold text-[#002C5C] mb-1">
-                Mobile First Corp
-              </h1>
-              <p class="text-xl font-normal text-[#64748B]">
-                React Native Developer
-              </p>
-            </div>
-            <div class="flex items-center gap-2 text-slate-500 font-medium">
-              <span>Remote</span>
-              <span class="text-[6px] text-slate-500">
-                <i class="fa-solid fa-circle"></i
-              ></span>
-              <span>Full-time</span>
-              <span class="text-[6px] text-slate-500">
-                <i class="fa-solid fa-circle"></i
-              ></span>
-              <span>$130,000 - $175,000</span>
-            </div>
-            <div class="job-description space-y-2">
-              <button class="btn btn-soft text-[14px]">Not Applied</button>
-              <p class="text-gray-700">
-                Build cross-platform mobile applications using React Native.
-                Work on products used by millions of users worldwide.
-              </p>
-            </div>
-            <div class="job-btn space-x-2">
-              <button class="btn btn-outline btn-success">INTERVIEW</button>
-              <button class="btn btn-outline btn-error">REJECTED</button>
-            </div>
-          </div>
-          <!-- Card DElet butoon -->
           <button class="btn btn-ghost btn-error btn-outline">
-            <i class="fa-regular fa-trash-can"></i>
-          </button>
-        </div>
-        <div class="main-card flex items-start justify-between space-y-8">
-          <!-- Card -->
-          <div class="main-card-content space-y-4">
-            <!-- card content -->
-            <div class="top-title mb-3">
-              <h1 class="text-2xl font-bold text-[#002C5C] mb-1">
-                Mobile First Corp
-              </h1>
-              <p class="text-xl font-normal text-[#64748B]">
-                React Native Developer
-              </p>
-            </div>
-            <div class="flex items-center gap-2 text-slate-500 font-medium">
-              <span>Remote</span>
-              <span class="text-[6px] text-slate-500">
-                <i class="fa-solid fa-circle"></i
-              ></span>
-              <span>Full-time</span>
-              <span class="text-[6px] text-slate-500">
-                <i class="fa-solid fa-circle"></i
-              ></span>
-              <span>$130,000 - $175,000</span>
-            </div>
-            <div class="job-description space-y-2">
-              <button class="btn btn-soft text-[14px]">Not Applied</button>
-              <p class="text-gray-700">
-                Build cross-platform mobile applications using React Native.
-                Work on products used by millions of users worldwide.
-              </p>
-            </div>
-            <div class="job-btn space-x-2">
-              <button class="btn btn-outline btn-success">INTERVIEW</button>
-              <button class="btn btn-outline btn-error">REJECTED</button>
-            </div>
-          </div>
-          <!-- Card DElet butoon -->
-          <button class="btn btn-ghost btn-error btn-outline">
-            <i class="fa-regular fa-trash-can"></i>
-          </button>
-        </div>
-        <div class="main-card flex items-start justify-between space-y-8">
-          <!-- Card -->
-          <div class="main-card-content space-y-4">
-            <!-- card content -->
-            <div class="top-title mb-3">
-              <h1 class="text-2xl font-bold text-[#002C5C] mb-1">
-                Mobile First Corp
-              </h1>
-              <p class="text-xl font-normal text-[#64748B]">
-                React Native Developer
-              </p>
-            </div>
-            <div class="flex items-center gap-2 text-slate-500 font-medium">
-              <span>Remote</span>
-              <span class="text-[6px] text-slate-500">
-                <i class="fa-solid fa-circle"></i
-              ></span>
-              <span>Full-time</span>
-              <span class="text-[6px] text-slate-500">
-                <i class="fa-solid fa-circle"></i
-              ></span>
-              <span>$130,000 - $175,000</span>
-            </div>
-            <div class="job-description space-y-2">
-              <button class="btn btn-soft text-[14px]">Not Applied</button>
-              <p class="text-gray-700">
-                Build cross-platform mobile applications using React Native.
-                Work on products used by millions of users worldwide.
-              </p>
-            </div>
-            <div class="job-btn space-x-2">
-              <button class="btn btn-outline btn-success">INTERVIEW</button>
-              <button class="btn btn-outline btn-error">REJECTED</button>
-            </div>
-          </div>
-          <!-- Card DElet butoon -->
-          <button class="btn btn-ghost btn-error btn-outline">
-            <i class="fa-regular fa-trash-can"></i>
-          </button>
-        </div>
-        <div class="main-card flex items-start justify-between space-y-8">
-          <!-- Card -->
-          <div class="main-card-content space-y-4">
-            <!-- card content -->
-            <div class="top-title mb-3">
-              <h1 class="text-2xl font-bold text-[#002C5C] mb-1">
-                Mobile First Corp
-              </h1>
-              <p class="text-xl font-normal text-[#64748B]">
-                React Native Developer
-              </p>
-            </div>
-            <div class="flex items-center gap-2 text-slate-500 font-medium">
-              <span>Remote</span>
-              <span class="text-[6px] text-slate-500">
-                <i class="fa-solid fa-circle"></i
-              ></span>
-              <span>Full-time</span>
-              <span class="text-[6px] text-slate-500">
-                <i class="fa-solid fa-circle"></i
-              ></span>
-              <span>$130,000 - $175,000</span>
-            </div>
-            <div class="job-description space-y-2">
-              <button class="btn btn-soft text-[14px]">Not Applied</button>
-              <p class="text-gray-700">
-                Build cross-platform mobile applications using React Native.
-                Work on products used by millions of users worldwide.
-              </p>
-            </div>
-            <div class="job-btn space-x-2">
-              <button class="btn btn-outline btn-success">INTERVIEW</button>
-              <button class="btn btn-outline btn-error">REJECTED</button>
-            </div>
-          </div>
-          <!-- Card DElet butoon -->
-          <button class="btn btn-ghost btn-error btn-outline">
-            <i class="fa-regular fa-trash-can"></i>
-          </button>
-        </div>
-        <div class="main-card flex items-start justify-between space-y-8">
-          <!-- Card -->
-          <div class="main-card-content space-y-4">
-            <!-- card content -->
-            <div class="top-title mb-3">
-              <h1 class="text-2xl font-bold text-[#002C5C] mb-1">
-                Mobile First Corp
-              </h1>
-              <p class="text-xl font-normal text-[#64748B]">
-                React Native Developer
-              </p>
-            </div>
-            <div class="flex items-center gap-2 text-slate-500 font-medium">
-              <span>Remote</span>
-              <span class="text-[6px] text-slate-500">
-                <i class="fa-solid fa-circle"></i
-              ></span>
-              <span>Full-time</span>
-              <span class="text-[6px] text-slate-500">
-                <i class="fa-solid fa-circle"></i
-              ></span>
-              <span>$130,000 - $175,000</span>
-            </div>
-            <div class="job-description space-y-2">
-              <button class="btn btn-soft text-[14px]">Not Applied</button>
-              <p class="text-gray-700">
-                Build cross-platform mobile applications using React Native.
-                Work on products used by millions of users worldwide.
-              </p>
-            </div>
-            <div class="job-btn space-x-2">
-              <button class="btn btn-outline btn-success">INTERVIEW</button>
-              <button class="btn btn-outline btn-error">REJECTED</button>
-            </div>
-          </div>
-          <!-- Card DElet butoon -->
-          <button class="btn btn-ghost btn-error btn-outline">
-            <i class="fa-regular fa-trash-can"></i>
-          </button>
-        </div>
-        <div class="main-card flex items-start justify-between space-y-8">
-          <!-- Card -->
-          <div class="main-card-content space-y-4">
-            <!-- card content -->
-            <div class="top-title mb-3">
-              <h1 class="text-2xl font-bold text-[#002C5C] mb-1">
-                Mobile First Corp
-              </h1>
-              <p class="text-xl font-normal text-[#64748B]">
-                React Native Developer
-              </p>
-            </div>
-            <div class="flex items-center gap-2 text-slate-500 font-medium">
-              <span>Remote</span>
-              <span class="text-[6px] text-slate-500">
-                <i class="fa-solid fa-circle"></i
-              ></span>
-              <span>Full-time</span>
-              <span class="text-[6px] text-slate-500">
-                <i class="fa-solid fa-circle"></i
-              ></span>
-              <span>$130,000 - $175,000</span>
-            </div>
-            <div class="job-description space-y-2">
-              <button class="btn btn-soft text-[14px]">Not Applied</button>
-              <p class="text-gray-700">
-                Build cross-platform mobile applications using React Native.
-                Work on products used by millions of users worldwide.
-              </p>
-            </div>
-            <div class="job-btn space-x-2">
-              <button class="btn btn-outline btn-success">INTERVIEW</button>
-              <button class="btn btn-outline btn-error">REJECTED</button>
-            </div>
-          </div>
-          <!-- Card DElet butoon -->
-          <button class="btn btn-ghost btn-error btn-outline">
-            <i class="fa-regular fa-trash-can"></i>
-          </button>
-        </div>
-        <div class="main-card flex items-start justify-between space-y-8">
-          <!-- Card -->
-          <div class="main-card-content space-y-4">
-            <!-- card content -->
-            <div class="top-title mb-3">
-              <h1 class="text-2xl font-bold text-[#002C5C] mb-1">
-                Mobile First Corp
-              </h1>
-              <p class="text-xl font-normal text-[#64748B]">
-                React Native Developer
-              </p>
-            </div>
-            <div class="flex items-center gap-2 text-slate-500 font-medium">
-              <span>Remote</span>
-              <span class="text-[6px] text-slate-500">
-                <i class="fa-solid fa-circle"></i
-              ></span>
-              <span>Full-time</span>
-              <span class="text-[6px] text-slate-500">
-                <i class="fa-solid fa-circle"></i
-              ></span>
-              <span>$130,000 - $175,000</span>
-            </div>
-            <div class="job-description space-y-2">
-              <button class="btn btn-soft text-[14px]">Not Applied</button>
-              <p class="text-gray-700">
-                Build cross-platform mobile applications using React Native.
-                Work on products used by millions of users worldwide.
-              </p>
-            </div>
-            <div class="job-btn space-x-2">
-              <button class="btn btn-outline btn-success">INTERVIEW</button>
-              <button class="btn btn-outline btn-error">REJECTED</button>
-            </div>
-          </div>
-          <!-- Card DElet butoon -->
-          <button class="btn btn-ghost btn-error btn-outline">
-            <i class="fa-regular fa-trash-can"></i>
+            <i id="delet-btn" class="fa-regular fa-trash-can"></i>
           </button>
         </div>
       </div>
