full assiment done

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- avaliable-section -->
     <div id="text-content" class="w-[98%] flex flex-row max-[576px]:flex-col justify-between max-[576px]:mb-2 mb-6">
       <h1 class="text-2xl font-bold text-[#002C5C]">Available Jobs</h1>
-      <p class=" max-[576px]:pt-2 pt-4 font-bold text-[#002C5C] text-2xl max-[576px]:text-[16px] ">Remaing Jobs<span
+      <p class=" max-[576px]:pt-2 pt-4 font-bold text-[#002C5C] text-2xl max-[576px]:text-[16px] ">Remaing<span
           id="jobs-count" class="ml-2 text-[#64748B]">0</span></p>
     </div>
     <!-- toggle button section -->
